# DBDMeta

./: .gitignore  last_intel.json
.github/workflows/: news-watcher.yml  sync-db.yml  sync-metadata.yml  update-metadata.yml
data/: characters.json  kmetadata.json  perks.json  tkperksmetadata.json  tsperksmetadata.json
tools/api/dbd_api/: main.py  pyproject.toml
tools/iconDownloader/: main.py  pyproject.toml
tools/iconURL/: main.py  pyproject.toml
tools/newswatcher/: main.py  pyproject.toml
tools/scraper/: main.py
tools/syncJSONtoDB/: main.py  pyproject.toml
tools/synccharacters/: main.py
tools/syncmetadata/: main.py
